samples/_failures_safe/1761220910_b086ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3399bda.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_d3399bda.c:130:5: error: expected identifier at end of input
  130 |     if (analyzer->
      |     ^~
./samples/SAFE/__tmp_d3399bda.c:130:5: error: expected declaration or statement at end of input
